compiler/test-data/parser/backend/errors/method_with_body.frel
module backend.errors.method_with_body

backend Counter {
    count : i32 = 0

    method get_count() : i32 {
        count
    }
}
